fix APN sketch links and preserve whitespaces in Ril100 station codes

--- a/src/main.css
+++ b/src/main.css
@@ -28,6 +28,7 @@ td {
     color: inherit;
     text-decoration: none;
     font-weight: bold;
+    white-space: pre;
 }
 
 .rl100TypeLong {
